????-??-??: 4.0.0-preview.3

	New features:

	all : added new function type notation (#6645)

	General improvements and optimizations:

	php : implemented direct method comparison. No need to use `Reflect.compareMethods()`

	Removals:

	Deprecations:

	php : deprecated support for `untyped __php__`, `untyped __call__` etc. Use `php.Syntax` instead.

	Bugfixes:

	js : fixed saving setter to `tmp` var before invocation (#6672)
	php : don't fail on generating import aliases for classes with the similar names (#6680)
	php : fixed `Sys.environment()` to also return variables set by `Sys.putEnv()`
	php : fixed `sys.net.Socket.bind()` (#6693)
	php : fixed appending "sqlite:" prefix to the names of files created by `sys.db.Sqlite.open()` (#6692)
	php : made php.Lib.objectOfAssociativeArray() recursive (#6698)
	php : fixed php error on parsing expressions like `a == b == c` (#6720)

2017-10-08: 4.0.0-preview.2

	New features:

	all : added final keyword (#6596)
	all : added new function type notation (#6645)

	General improvements and optimizations:

	all : replaced some occurrences of List with Array
	all : changed haxe.xml.Fast to an abstract
	all : improved optimization when comparing against `null`
	all : added support for `case var x` syntax and detect possible typos (#6608)
	php : changed `--php-prefix`, `--php-front` and `--php-lib` to `-D php-prefix=`, `-D php-front=` and `-D php-lib=` respectively

	Removals:

	all : moved haxe.unit to hx3compat
	all : moved haxe.web.Request to hx3compat
	php : dropped php5 support; minimum supported php version is 7.0 now

	Bugfixes:

	all : fixed issue with various functions not being displayed in macro context (#6000)
	all : fixed invalid  static extension lookup on `super` (#3607)
	all : fixed typing error when constructing enums with abstracts over functions (#6609)
	all : fixed bug that skipped checking @:from typing in some cases (#6564)
	all : fixed Int64 parsing of negative numbers that end in a zero (#5493)